fix(UI): graph container overflow

--- a/packages/pytheas-ui/app/styles/app.scss
+++ b/packages/pytheas-ui/app/styles/app.scss
@@ -158,7 +158,7 @@ p {
 }
 
 .graph-container {
-    overflow: auto;
+    overflow: hidden;
 
     &:focus {
         outline: none;
